fixed: root divoverflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 #root {
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 body {
